--- a/app/views/locomotive_contrib/extensions/index.html.haml
+++ b/app/views/locomotive_contrib/extensions/index.html.haml
@@ -1,4 +1,6 @@
 - title link_to(@site.name.blank? ? @site.name_was : @site.name, '#', :rel => 'site_name', :title => t('.ask_for_name'), :class => 'editable')
 
-- content_for :submenu do
-  = render_cell 'locomotive/settings_menu', :show
+- if can? :create, LocomotiveContrib::Extension
+  - content_for :buttons do
+    = local_action_button :new, new_extension_url, :class => 'new', :id => 'newpage'
+
